# docstream-new

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/api-python/: .dockerignore  .env.example  =1.13.0  =8.0.0  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
apps/api-python/alembic/: env.py
apps/api-python/alembic/versions/: 80c920ba0eb4_initial_schema.py
apps/api-python/docstream_api/: __init__.py  auth.py  database.py  db_models.py  limits.py  main.py
apps/api-python/docstream_api/routes/: batch.py  billing.py  compile.py  convert.py  feedback.py  health.py  jobs.py
apps/api-python/docstream_api/services/: converter.py
apps/api-python/docstream_api/utils/: file_handler.py  rate_limit.py
apps/api-python/tests/: conftest.py  test_batch.py  test_convert.py  test_feedback.py  test_jobs.py
apps/cli-python/: README.md  pyproject.toml
apps/cli-python/docstream_cli/: __init__.py  cli.py
apps/cli-python/tests/: conftest.py  test_cli.py
apps/web-node/: .dockerignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web-node/.github/: copilot-instructions.md
apps/web-node/.superdesign/: design-system.md
apps/web-node/.superdesign/replica_html_template/: home.html  index.html
apps/web-node/docs/: v2-architecture.md
apps/web-node/scripts/: e2e_test.py
apps/web-node/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web-node/src/app/api/auth/[...nextauth]/: route.ts
apps/web-node/src/app/api/auth/token/: route.ts
apps/web-node/src/app/billing/: page.tsx
apps/web-node/src/app/convert/: page.tsx
apps/web-node/src/app/history/: page.tsx
apps/web-node/src/app/login/: page.tsx
apps/web-node/src/app/stats/: page.tsx
apps/web-node/src/components/: SessionProvider.tsx
apps/web-node/src/components/convert/: DropZone.tsx  FormatSelector.tsx  LatexEditor.tsx  OutputFormatSelector.tsx  PdfPreview.tsx  ProgressTracker.tsx  ResultCard.tsx  TemplateSelector.tsx
apps/web-node/src/components/feedback/: FeedbackWidget.tsx
apps/web-node/src/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  OpenSource.tsx  UploadDemo.tsx
apps/web-node/src/lib/: api.ts  theme-provider.tsx
docker/: Dockerfile.api  Dockerfile.web
docs/: changelog.md  index.md
docs/api/: convert.md
docs/deployment/: railway-vercel.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: providers.md  templates.md
