[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docstream-cli"
version = "0.2.0"
description = "DocStream command-line interface — convert PDFs to LaTeX from your terminal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yash Kasare", email = "yashnkasare16@gmail.com" },
]
keywords = ["pdf", "latex", "cli", "document-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
# Local-path dependency: resolved at install time relative to this pyproject.toml.
# Hatch's `allow-direct-references` lets us use a PEP 508 file:// URL so this works
# under plain `pip install -e .` *and* under `uv pip install` without extra config.
dependencies = [
    "docstream-core @ {root:uri}/../../packages/core-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
docstream = "docstream_cli.cli:_cli_entry"

[project.urls]
Homepage = "https://github.com/YashKasare21/docstream-new"
Repository = "https://github.com/YashKasare21/docstream-new"

# Mirror the local-path dep for uv users (uv reads this; pip ignores it).
[tool.uv.sources]
docstream-core = { path = "../../packages/core-python", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docstream_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["docstream_cli", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
